--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../src/css/index.css">
     <title>
-        WAFS Week 1
+        WAFS
     </title>
 </head>
 <body>
